[package]
name = "ngx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.65"

[dependencies]
widestring = "1"
libc = "0.2"
ash = "*"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
derive_builder = "0.12"
