[package]
name = "nvngx"
version = "0.1.1"
edition = "2021"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "NVIDIA NGX bindings."
readme = "README.md"
license = "MIT"
keywords = ["nvidia", "ngx", "DLSS", "upscaling", "supersampling"]
rust-version = "1.57"
repository = "https://github.com/vityafx/nvngx-rs"
documentation = "https://docs.rs/nvngx-rs"

[build-dependencies]
bindgen = "0.65"

[dependencies]
widestring = "1"
libc = "0.2"
ash = "0.37"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
derive_builder = "0.12"
