[package]
name = "nvngx-sys"
version.workspace = true
edition = "2021"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "NVIDIA NGX raw bindings."
readme = "README.md"
license = "MIT"
keywords = ["nvidia", "ngx", "DLSS", "upscaling", "supersampling"]
rust-version = "1.57"
repository = "https://github.com/iddm/nvngx-rs"
documentation = "https://docs.rs/nvngx-rs"

include = [
    "DLSS/lib/Linux_x86_64/libnvsdk_ngx.a",
    "DLSS/include/**/*",
    "src/*",
    "build.rs",
]

[build-dependencies]
bindgen = "0.71"

[dependencies]
widestring = "1"
libc = "0.2"
